--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
+.idea
 
 # Distribution / packaging
 .Python
@@ -87,3 +86,6 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+ # Robohat sample files
+ robohat/
